# priva-cloud

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pack.sh  pyproject.toml  requirements.txt
.claude/: launch.json
deploy/: README.md
deploy/config/: agent-runner.yaml  control-panel.yaml  data-spine.yaml  operator.yaml
deploy/crds/: agenttenant.yaml
deploy/dev-storage/: entrypoint.sh  export-pv.yaml  nfs-xfs.Dockerfile  nfs-xfs.yaml
deploy/docker/: agent-runner.Dockerfile  control-panel.Dockerfile  data-spine.Dockerfile  operator.Dockerfile
docs/: im-channel-permission-zh.md  priva-cloud-architecture-report.html
libs/common/: README.md  pyproject.toml
libs/common/src/priva_common/: __init__.py  _pagination.py  audit_log.py  config.py  crypto.py  logging.py  paths.py  redis_catalog.py  runner_token.py  runtime_config_store.py  script_lint.py  sensitive_mask.py  serialization.py  skill_exclude.py  user_env.py  user_store.py  wire.py  workspace.py
libs/common/src/priva_common/dataplane/: __init__.py  client.py  converters.py  factory.py  grpc_client.py
libs/common/src/priva_common/dataplane/v1/: __init__.py  account_pb2.py  account_pb2.pyi  account_pb2_grpc.py  admin_pb2.py  admin_pb2.pyi  admin_pb2_grpc.py  binding_pb2.py  binding_pb2.pyi  binding_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  quota_pb2.py  quota_pb2.pyi  quota_pb2_grpc.py  registration_pb2.py  registration_pb2.pyi  registration_pb2_grpc.py  resource_spec_pb2.py  resource_spec_pb2.pyi  resource_spec_pb2_grpc.py  runner_defaults_pb2.py  runner_defaults_pb2.pyi  runner_defaults_pb2_grpc.py  scheduler_pb2.py  scheduler_pb2.pyi  scheduler_pb2_grpc.py  secret_pb2.py  secret_pb2.pyi  secret_pb2_grpc.py
libs/common/src/priva_common/models/: __init__.py  admin.py  admin_files.py  agent.py  auth.py  hooks.py  plugin.py  resource.py  scheduler.py  subagents.py  user_env.py
packaging/priva-cloud/: pyproject.toml
protos/: README.md  gen.sh
scripts/: build-wheel.sh  sse_permission_demo.py  stream_agent.py
services/: README.md
services/agent-runner/: pyproject.toml
services/agent-runner/src/priva_agent_runner/: __init__.py  __main__.py  activity.py  app.py  deps.py  entry.py  signed_header.py
services/agent-runner/src/priva_agent_runner/bundled/: requirements.txt
services/agent-runner/src/priva_agent_runner/bundled/skills/docx/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/excalidraw-diagram/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/excalidraw-diagram/references/: excalidraw-schema.md
services/agent-runner/src/priva_agent_runner/bundled/skills/file-reading/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/mcp-server-creator/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/mcp-server-creator/references/: architecture.md
services/agent-runner/src/priva_agent_runner/bundled/skills/mermaid-visualizer/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/mermaid-visualizer/references/: syntax-rules.md
services/agent-runner/src/priva_agent_runner/bundled/skills/pdf/: REFERENCE.md  SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/pdf-reading/: REFERENCE.md
services/agent-runner/src/priva_agent_runner/bundled/skills/pptx/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/priva-user-manual/: SKILL.md
services/agent-runner/src/priva_agent_runner/bundled/skills/priva-user-manual/references/: api-admin.md  api-agent.md  api-auth.md  api-files.md  api-hooks.md  api-mcp.md  api-skills.md  webapp-mcp.md  webapp-settings.md
services/agent-runner/src/priva_agent_runner/bundled/skills/skill-creator/: requirements.txt
services/agent-runner/src/priva_agent_runner/bundled/skills/skill-creator/agents/: analyzer.md  comparator.md
services/agent-runner/src/priva_agent_runner/bundled/skills/skill-creator/references/: schemas.md
services/agent-runner/src/priva_agent_runner/bundled/skills/skill-creator/scripts/: quick_validate.py
services/agent-runner/src/priva_agent_runner/routers/: agent.py  files.py  hooks.py  mcp.py  pty.py  skill_hub.py  skills.py  subagents.py  user_config.py  user_data.py  user_files.py
services/agent-runner/src/priva_agent_runner/services/: compute_user_stats.py  pty_session.py  sandbox_venv.py  skill_hub.py  skills.py  subagents.py  temp_files.py
services/agent-runner/src/priva_agent_runner/services/claude_sdk/: __init__.py  client.py  options.py  permission_coordinator.py  retry.py  serialization.py  service.py
services/agent-runner/src/priva_agent_runner/services/hooks/: builder.py  built_in_hooks.py  callbacks.py  config_manager.py  executor.py  log_store.py  prefs.py  registry.py  risky_matcher.py
services/agent-runner/src/priva_agent_runner/services/mcp/: __init__.py  built_in.py  config_manager.py  validator.py
services/agent-runner/src/priva_agent_runner/services/priva_plugin/: __init__.py  base.py  manager.py
services/agent-runner/src/priva_agent_runner/services/priva_plugin/plugins/enterprise_user_info/: formatter.py  mcp_provider.py  plugin.py
services/control-panel/: pyproject.toml
services/control-panel/src/priva_control_panel/: __init__.py  app.py  entry.py  extproc.py  provisioner.py  proxy.py
services/control-panel/src/priva_control_panel/routers/: admin.py  admin_files.py  auth.py  console.py  metrics.py  resource.py  user_data.py
services/control-panel/src/priva_control_panel/services/: auth.py  compute_user_stats.py  secret_env.py
services/data-spine/: pyproject.toml
services/data-spine/src/priva_data_spine/: __init__.py  __main__.py  entry.py  migrate.py  repo.py  schema.py  server.py  service.py
services/operator/: pyproject.toml
services/operator/src/priva_operator/: __init__.py  __main__.py  entry.py  kube.py  names.py  reconcile.py  secrets.py  storage_backend.py
tools/cli/: pyproject.toml
tools/cli/src/priva_cli/: __init__.py  __main__.py  discovery.py  serve.py
web/: design-spec.md  package-lock.json  package.json
(+569 files in other folders)
