[project]
name = "priva-common"
version = "0.0.0"
description = "Shared contract layer for Priva Cloud: wire format, models, data-plane client, crypto, redis catalog, settings, observability."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "redis>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priva_common"]
