[project]
name = "priva-common"
version = "0.0.0"
description = "Shared contract layer for Priva Cloud: wire format, models, data-plane client, crypto, redis catalog, settings, observability."
requires-python = ">=3.11"
dependencies = [
    # Models / DTOs
    "pydantic>=2.10",
    # Settings loader (config.py)
    "pydantic-settings",
    "pyyaml",
    # Observability (metrics.py, logging.py)
    "prometheus-client",
    "fastapi",
    "loguru",
    # Crypto (crypto.py)
    "cryptography",
    # Wire format (serialization.py) — shared pod↔connector
    "claude-agent-sdk==0.1.81",
    # Redis catalog (redis_catalog.py)
    "redis>=5",
    # Data-plane gRPC contract (dataplane/) — generated stubs import grpc + protobuf.
    # grpc_client lazy-imports grpc so the in-process transport never needs it loaded.
    "grpcio>=1.60",
    "protobuf",
]

[dependency-groups]
# Codegen-only: grpcio-tools (protoc + plugins). Not a runtime dep — used by protos/gen.sh.
dev = ["grpcio-tools>=1.60"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priva_common"]
