[project]
name = "priva-agent-runner"
version = "0.0.0"
description = "Priva Cloud agent-runner: the agent runtime (claude_sdk) + agent/session/permission API + hooks/mcp/skills/subagents execution + pty/files. Single-account, behind a signed account_id header."
requires-python = ">=3.11"
dependencies = [
    "priva-common",
    "priva-data-spine",
    "claude-agent-sdk==0.1.81",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "websockets",
    "python-jose[cryptography]",
    "python-multipart",
    "pyyaml",
    "mcp>=1.19.0",
]

[project.entry-points."priva_cloud.services"]
agent-runner = "priva_agent_runner.entry:main"

[tool.uv.sources]
priva-common = { workspace = true }
priva-data-spine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priva_agent_runner"]

[tool.hatch.build.targets.wheel.force-include]
"src/priva_agent_runner/bundled" = "priva_agent_runner/bundled"
