[project]
name = "priva-data-spine"
version = "0.0.0"
description = "Priva Cloud data-spine: durable-state RPC impl (Accounts/Binding/Quota/Scheduler) over SQLite, behind the priva_common.dataplane contract."
requires-python = ">=3.11"
dependencies = [
    "priva-common",
    "bcrypt",        # password hashing (account service)
    "pyyaml",        # migrate: read monolith YAML
]

[project.entry-points."priva_cloud.services"]
data-spine = "priva_data_spine.entry:main"

[tool.uv.sources]
priva-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priva_data_spine"]
