[project]
name = "priva-operator"
version = "0.1.0"
description = "Priva Cloud operator — kopf AgentTenant controller (sole scaler 0<->1)"
requires-python = ">=3.11"
dependencies = [
    "priva-common",
    "kopf>=1.37",
    "kubernetes>=29",
    "httpx",
]

[project.entry-points."priva_cloud.services"]
operator = "priva_operator.entry:main"

[tool.uv.sources]
priva-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priva_operator"]
